kubernetes/addons/observability/prometheus/ingress/alertmanager-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://alertmanager.default.internal.javiersant.com"
    gethomepage.dev/description: Alert Manager
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: alertmanager.svg
    gethomepage.dev/name: Alert Manager
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 498
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-stack-kube-prom-alertmanager
          port: 9093
  tls:
    secretName: wildcard-javiersant-com-tls
