kubernetes/addons/observability/prometheus/ingress/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://grafana.default.internal.javiersant.com"
    gethomepage.dev/description: Grafana Dashboard
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/name: Grafana
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 498
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-stack-grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
  tls:
    secretName: wildcard-javiersant-com-tls
