kubernetes/addons/observability/prometheus/ingress/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javstudio.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.javstudio.org`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: iam
      services:
        - kind: Service
          name: prometheus-stack-kube-prom-prometheus
          port: 9090
  tls:
    secretName: wildcard-javstudio-org-tls
